--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,7 +9,11 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Hola</ion-title>
+      <ion-title size="large">Hola </ion-title>
+      <!-- <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon> -->
+
+      
+
     </ion-toolbar>
   </ion-header>
 
@@ -46,6 +50,7 @@
       <ion-label>Fecha Nacimiento</ion-label>
       <ion-item>
         <ion-input type="date" [(ngModel)]="selectedDate"></ion-input>
+        
       </ion-item>
     </ion-item>
 
@@ -54,9 +59,8 @@
     <!-- Creamos el boton-->
     <ion-button (click) = "limpiar()">Limpiar</ion-button>
     <ion-button (click) = "mostrar()">Mostrar</ion-button>
-
-
-
+  
   </ion-card>
+
   </div>
 </ion-content>
