--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,19 +11,30 @@
     <ion-toolbar>
       <ion-title size="large">Hola </ion-title>
       <!-- <mat-icon aria-hidden="false" aria-label="Example home icon" fontIcon="home"></mat-icon> -->
-
-      
-
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
+  <div id="container" class="cuerpo_page">
   <ion-card>
 
     <ion-card-title>
-      <h3>Información Adicional</h3>
+      <h3>Perfil de usuario</h3>
       <p>Usuario: {{ usuarioRecibido }}</p>
     </ion-card-title>
+
+
+
+<!-- Colocamos la imagen dentro de un ion-grid -->
+<ion-grid>
+  <ion-row>
+    <ion-col size="12" class="ion-text-center">
+      <div class=animated-image-rotate>
+        <img class="logo" src="assets/bone3.png" alt="My Image" />
+      </div>
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
 
     <!-- Creamos los campos para el login-->
     <ion-card-content>
@@ -38,21 +49,31 @@
     </ion-item>
 
     <ion-item>
-      <ion-label>Nivel de Educación</ion-label>
-      <ion-select [(ngModel)]="selectedOption">
-        <ion-select-option value="option1">Universitario</ion-select-option>
-        <ion-select-option value="option2">Magister</ion-select-option>
-        <ion-select-option value="option3">Doctorado</ion-select-option>
-      </ion-select>
-    </ion-item>
-
-    <ion-item>
       <ion-label>Fecha Nacimiento</ion-label>
       <ion-item>
-        <ion-input type="date" [(ngModel)]="selectedDate"></ion-input>
+        <!-- Componente de Angular Material -->
+        <mat-form-field>
+          <mat-label>Fecha Nacimiento</mat-label>
+          <input matInput [matDatepicker]="picker" [(ngModel)]="selectedDate">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field>
+
+        <!--  <ion-input type="date" [(ngModel)]="selectedDate"></ion-input> -->
         
       </ion-item>
     </ion-item>
+
+
+    <ion-item>
+      <ion-label>Historial de casos</ion-label>
+      <ion-select [(ngModel)]="selectedOption">
+        <ion-select-option value="option1">Caso A</ion-select-option>
+        <ion-select-option value="option2">Caso B</ion-select-option>
+        <ion-select-option value="option3">Caso C</ion-select-option>
+      </ion-select>
+    </ion-item>
+
 
   </ion-card-content>
 
