--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -13,13 +13,26 @@
 </ion-content>
 
 
-<div class="ion-text-center">
+<div class="ion-text-center cuerpo_page">
 <!-- Colocamos todo dentro de un ion-card -->
 <ion-card-title>
   <h3>Bienvenidos</h3>
 </ion-card-title>
-<!-- Colocamos los campos para el login -->
 
+<!-- Colocamos la imagen dentro de un ion-grid -->
+<ion-grid>
+  <ion-row>
+    <ion-col size="12" class="ion-text-center">
+      <img class="logo" src="assets/bone3.png" alt="My Image" />
+    </ion-col>
+  </ion-row>
+</ion-grid>
+
+
+
+
+
+<!-- Colocamos los campos para el login -->
 <ion-card-content>
 
   <ion-item>
