--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,12 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+/* Estilos globales */
+
+.cuerpo_page{
+    background: radial-gradient(circle, white 0%, cornflowerblue 100%);
+    height: 100%;
+    padding-top: 10%;
+
+}
