sqlite y android studio
No funcionan paginas login ni registro

--- a/src/app/edad/edad.page.scss
+++ b/src/app/edad/edad.page.scss
@@ -74,7 +74,7 @@
   
   @keyframes move {
     0% {
-      trnsform: translateX(0);
+      transform: translateX(0);
     }
     100% {
       transform: translateX(100px);
