--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
 
     <ion-card-title>
       <h3>Perfil de usuario</h3>
-      <p>Usuario: {{ usuarioRecibido }}</p>
+      <p>Usuario: {{ usuarioRecibidoPersistente }}</p>
     </ion-card-title>
 
 
