--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,5 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>
       Home
     </ion-title>
@@ -84,4 +87,9 @@
   </ion-card>
 
   </div>
+
+  <div id="container">
+    <!-- Boton para llamar a MiPagina-->
+     <ion-button expand="block" (click)="navegarAMiPagina()">Ir a MiPagina</ion-button>
+  </div> 
 </ion-content>
