--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -53,7 +53,7 @@ ion-card{
 
 @keyframes rotate {
   from {
-    trnsform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
@@ -74,7 +74,7 @@ ion-card{
 
 @keyframes move {
   0% {
-    trnsform: translateX(0);
+    transform: translateX(0);
   }
   100% {
     transform: translateX(100px);
