--- a/src/app/sex/sex.page.scss
+++ b/src/app/sex/sex.page.scss
@@ -53,7 +53,7 @@
   
   @keyframes rotate {
     from {
-      trnsform: rotate(0deg);
+      transform: rotate(0deg);
     }
     to {
       transform: rotate(360deg);
