funcionando - antes de cambiar ts de home a registro

--- a/src/app/edad/edad.page.html
+++ b/src/app/edad/edad.page.html
@@ -115,12 +115,13 @@
 
 
     <!-- Creamos el boton-->
+    <ion-button>Guardar</ion-button>
     <ion-button>Limpiar</ion-button>
     <ion-button>Estimar edad</ion-button>
+    <ion-button (click)="volver()">Volver</ion-button> 
+
   
     
-
-
   </ion-card-content>
 
  
