--- a/src/app/estatura/estatura.page.html
+++ b/src/app/estatura/estatura.page.html
@@ -80,9 +80,12 @@
 
 
     <!-- Creamos el boton-->
+    <ion-button>Guardar</ion-button>
     <ion-button>Limpiar</ion-button>
     <ion-button>Estimar estatura</ion-button>
-  
+    <ion-button (click)="volver()">Volver</ion-button> 
+
+
   
 
 
