--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -47,6 +47,7 @@
 
 </ion-card-content>
     <!-- Creamos el boton -->
-    <ion-button expand="block" (click)="login()">Ingrese ahora</ion-button>
+    <ion-button expand="block" (click)="login()">Ingresar</ion-button>
+    <ion-button expand="block" (click)="crear_cuenta()">Crear Cuenta</ion-button> 
 
 </div>
