--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -76,7 +76,7 @@
 
         <!-- Creamos el boton -->
         <ion-button (click)="guardar()" >Guardar Datos</ion-button>
-        <ion-button (click)="volver()">Volver</ion-button> 
+        <ion-button (click)="volver()">Volver a Login</ion-button> 
     </ion-card>
   </div>
 </ion-content>
