--- a/src/app/sex/sex.page.html
+++ b/src/app/sex/sex.page.html
@@ -140,9 +140,11 @@
 
 
     <!-- Creamos el boton-->
+    <ion-button>Guardar</ion-button>
     <ion-button>Limpiar</ion-button>
     <ion-button>Estimar sexo</ion-button>
-  
+    <ion-button (click)="volver()">Volver</ion-button> 
+
 
 
 
