--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -4,7 +4,7 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Productos</ion-title>
+    <ion-title>Explorar caso</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -22,18 +22,28 @@
     <ion-tab-bar slot="buttom">
 
       <ion-tab-button tab="home">
-        <ion-icon name="planet-outline"></ion-icon>
-        <ion-label>Drones</ion-label>
+        <ion-icon name="home-outline"></ion-icon>
+        <ion-label>Home</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="sex">
-        <ion-icon name="airplane-outline"></ion-icon>
-        <ion-label>Experiencias</ion-label>
+        <ion-icon name="male-female-outline"></ion-icon>
+        <ion-label>Sexo</ion-label>
       </ion-tab-button>
 
       <ion-tab-button tab="edad">
-        <ion-icon name="images-outline"></ion-icon>
-        <ion-label>Galería</ion-label>
+        <ion-icon name="time-outline"></ion-icon>
+        <ion-label>Edad</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="estatura">
+        <ion-icon name="body-outline"></ion-icon>
+        <ion-label>Estatura</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button tab="apitest">
+        <ion-icon name="planet-outline"></ion-icon>
+        <ion-label>Api Test</ion-label>
       </ion-tab-button>
 
     </ion-tab-bar>
