--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -38,7 +38,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">usuario</ion-label>
+        <ion-label position="floating">Usuario</ion-label>
         <ion-input type="text" [(ngModel)]="usuario"></ion-input>
       </ion-item>
 
