--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -21,7 +21,7 @@
 
     <ion-tab-bar slot="buttom">
 
-      <ion-tab-button tab="home">
+      <ion-tab-button tab="home" aria-selected="true">
         <ion-icon name="home-outline"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-tab-button>
