--- a/src/global.scss
+++ b/src/global.scss
@@ -39,7 +39,7 @@
 /* Estilos globales */
 
 .cuerpo_page{
-    background: radial-gradient(circle, white 0%, cornflowerblue 100%);
+    background: radial-gradient(circle, white 0%, rgb(237, 194, 100) 100%);
     height: 100%;
     padding-top: 10%;
 
