--- a/src/app/sex/sex.page.html
+++ b/src/app/sex/sex.page.html
@@ -116,7 +116,7 @@
       </ion-item>
 
     <ion-item>
-      <ion-label>Concavidad subpúbica</ion-label>
+      <ion-label>Escotadura ciática mayor</ion-label>
       <ion-select>
         <ion-select-option value="option1">1</ion-select-option>
         <ion-select-option value="option2">2</ion-select-option>
