fallado, luego volver a previo

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -69,7 +69,7 @@
 
   <!-- Creamos el boton-->
   <!--<ion-button (click) = "limpiar()">Limpiar</ion-button>-->
-  <ion-button (click) = "mostrar()">Mostrar datos cuenta</ion-button>
+  <!--<ion-button (click) = "mostrar()">Mostrar datos cuenta</ion-button>-->
   <ion-button (click) = "navegarARegistroCaso()">Agregar caso</ion-button>
   <ion-button (click) = "navegarAMiPagina()">Explorar caso</ion-button>
 
